add simple magento logic
