# packages/ecommerce-server/src/services/dashboard/index.ts
@@ -30,6 +30,8 @@ export const saveUserDatasource = async (
   datasource.platform = userReq.platform;
   datasource.consumerKey = userReq.consumerKey;
   datasource.consumerSecret = userReq.consumerSecret;
+  datasource.accessToken = userReq.accessToken;
+  datasource.accessTokenSecret = userReq.accessTokenSecret;
   datasource.baseUrl = userReq.baseUrl;
   datasource.webhookSecret = getPassword();
   datasource.isActive = true;
